# ChangeLog for dev-python/pyndex
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyndex/ChangeLog,v 1.11 2014/08/10 21:17:01 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> pyndex-0.3.2a.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  06 Nov 2013; Patrick Lauer <patrick@gentoo.org> pyndex-0.3.2a.ebuild:
  Shorten description, make repoman happier

  09 Sep 2012; Raúl Porcel <armin76@gentoo.org> pyndex-0.3.2a.ebuild:
  Drop ia64/s390 keywords

  25 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pyndex-0.3.2a.ebuild:
  Fix dependencies. Set SUPPORT_PYTHON_ABIS.

  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> pyndex-0.3.2a.ebuild:
  Adding ~amd64 keyword

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> pyndex-0.3.2a.ebuild:
  Mark 0.3.2a stable on ia64

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> pyndex-0.3.2a.ebuild:
  Mark 0.3.2a ~ia64

  07 Feb 2005; Fernando Serboncini <fserb@gentoo.org> pyndex-0.3.2a.ebuild:
  stable on x86

  16 Apr 2004; Michael McCabe <randy@gentoo.org> pyndex-0.3.2a.ebuild:
  adding s390 keywords

*pyndex-0.3.2a (17 Feb 2004)
  
  17 Feb 2004; Thomas Raschbacher <lordvan@gentoo.org> pyndex-0.3.2a.ebuild:
  initial import