@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pyndex
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyndex/ChangeLog,v 1.11 2014/08/10 21:17:01 slyfox Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyndex/ChangeLog,v 1.12 2015/02/18 02:47:34 idella4 Exp $
+
+*pyndex-0.3.2a-r1 (18 Feb 2015)
+
+  18 Feb 2015; Ian Delaney <idella4@gentoo.org> +pyndex-0.3.2a-r1.ebuild:
+  revbump; convert -> distutils-r1
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> pyndex-0.3.2a.ebuild:
   QA: drop trailing '.' from DESCRIPTION
